# Haotian

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  start_haotian.py
agents/: openai.yaml
docs/: architecture.md  capability-taxonomy.md  ops.md
docs/superpowers/plans/: 2026-03-23-haotian-deep-repo-analysis-implementation.md  2026-03-23-haotian-skill-first-refactor.md  2026-03-25-haotian-skill-sync-and-probe-hardening-implementation.md  2026-03-27-haotian-skill-discovery-and-install-redesign-implementation.md
docs/superpowers/specs/: 2026-03-23-haotian-deep-repo-analysis-design.md  2026-03-23-haotian-skill-first-design.md  2026-03-25-haotian-skill-sync-and-probe-hardening-design.md  2026-03-27-haotian-skill-discovery-and-install-redesign-design.md
src/haotian/: __init__.py  config.py  main.py  runner.py
src/haotian/analyzers/: __init__.py  capability_classifier.py  (+1 more)
tests/: conftest.py  test_capability_classifier.py  test_capability_normalizer.py  test_chat_service.py  test_classification_artifact_service.py  test_cli_chat_service.py  test_codex_skill_inventory_service.py  test_config.py  test_diff_service.py  test_orchestration_service.py  test_report_service.py  test_repository_analysis_cache_service.py  test_repository_probe_service.py  test_repository_skill_candidate_service.py  test_repository_skill_package_service.py  test_repository_workspace_service.py  test_runner.py  test_skill_audit_service.py  test_skill_sync_service.py  test_start_haotian.py  test_telegram_bot.py  test_trending_parser.py  test_web_server.py
(+45 files in other folders)
