[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haotian"
version = "0.1.0"
description = "Haotian daily reporting CLI scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.6,<3.0",
  "typer>=0.12,<1.0",
]

[project.scripts]
haotian = "haotian.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
